Regression: Data Transfer Projected Face Interpolated mode gives wrong results #97528

Closed
opened 2022-04-22 01:14:29 +02:00 by Juan Pablo Bouza · 8 comments

Blender 3.1 to 3.1.2, Ubuntu 64.

This work perfectly ok in Blender 3.0

Caused by cfa53e0fbe

Projected Face Interpolated mode is giving wrong results for Vertex Weights Transfer in both the Data Transfer Modifier and the Weights Transfer menu in Weight Painting mode.

I'm attaching the example blend file:

data_transfer_bug.blend

To redo the bug, just open the blend file and change the mapping mode in the data transfer modifier to Projected Face Interpolated, all the other mapping methods work.

This is how the vgroup transferred to the sphere should look like:

image.png

But it looks like this:

image.png

Blender 3.1 to 3.1.2, Ubuntu 64. This work perfectly ok in Blender 3.0 Caused by cfa53e0fbe Projected Face Interpolated mode is giving wrong results for Vertex Weights Transfer in both the Data Transfer Modifier and the Weights Transfer menu in Weight Painting mode. I'm attaching the example blend file: [data_transfer_bug.blend](https://archive.blender.org/developer/F13015075/data_transfer_bug.blend) To redo the bug, just open the blend file and change the mapping mode in the data transfer modifier to Projected Face Interpolated, all the other mapping methods work. This is how the vgroup transferred to the sphere should look like: ![image.png](https://archive.blender.org/developer/F13015079/image.png) But it looks like this: ![image.png](https://archive.blender.org/developer/F13015081/image.png)
Author
Member

Added subscriber: @jpbouza-4

Added subscriber: @jpbouza-4

Added subscriber: @SavMartin

Added subscriber: @SavMartin
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check.

Can confirm, will check.
Philipp Oeser self-assigned this 2022-04-22 09:55:14 +02:00
Member

Caused by cfa53e0fbe

Will check on a fix...

Caused by cfa53e0fbe Will check on a fix...

This issue was referenced by 9c279723da

This issue was referenced by 9c279723da7132ed5f2a09d75ff3b116fb9959a6
Philipp Oeser changed title from Data Transfer Projected Face Interpolated mode gives wrong results to Regression: Data Transfer Projected Face Interpolated mode gives wrong results 2022-04-22 11:01:53 +02:00
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97528
No description provided.